# dotenv-cli

./: .gitignore  .npmignore  .npmrc  Cargo.toml  README.md  Taskfile.yaml  jest.config.js  package-lock.json  package.json  postinstall.js  tsconfig.json
.github/workflows/: node.tests.yml  release-assets.yml  release.yml  test.node.yml  test.rust.yml
devops/: ga-release-plan.sh  publish-if-complete.sh  release.sh  render-release-notes.sh
devops/release/: 1-bump-version.sh  2-tag-version.sh  3-build-release-assets.sh  3-generate-release-notes.sh  5-create-github-release.sh  finalize-release.sh  release-config.sh  release.sh
devops/templates/: release-notes.md
src/: app.ts  cli.rs  envObject.ts  envParser.ts  env_object.rs  env_parser.rs  errors.rs  escapeAndQuote.ts  formatValue.ts  format_value.rs  lib.rs  log.ts  main.rs  qualifying_rules.rs  readPipe.ts  read_pipe.rs  ruleViolationError.ts
src/components/: qualifyingRules.ts
src/errors/: EnvParseError.ts  RuleViolationError.ts
src/handlers/: delete_key.rs  get_value.rs  mod.rs  run_command.rs  set_value.rs
src/services/: handlers.ts
src/services/handlers/: deleteKey.ts  getValue.ts  setValue.ts
tests/: .env.test  app.rs  app.tests.ts  cmd.rs  cmd.tests.ts  debug.rs  envParser.tests.ts  env_object.rs  env_parser.rs  escape.tests.ts  format_value.rs  json.rs  json.tests.ts  qualifying_rules.rs  resolveNestedVariables.tests.ts  resolve_nested_variables.rs  run_command.rs  setAndDelete.tests.ts  set_and_delete.rs  wildcard.rs
tests/envFiles/: badList.env  singleQuote.env  space.env
