[package]
name = "dotenv-cli"
version = "1.2.1"
edition = "2021"
description = "Read and update dotenv files from the cli"
license = "GPL-3.0-or-later"

[lib]
name = "dotenv_cli"
path = "src/lib.rs"

[[bin]]
name = "dotenv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sha2 = "0.11.0"
